fix (button): dropdown button doesn't stretch anymore

--- a/packages/ketchup-lite/src/components/kul-button/styles/kul-button-main.scss
+++ b/packages/ketchup-lite/src/components/kul-button/styles/kul-button-main.scss
@@ -302,6 +302,7 @@
   }
 
   &--dropdown {
+    max-width: max-content;
     min-width: unset;
     padding: 0.5em;
     position: relative;
